# Etasks_OCaml

./: .gitignore  README.MD  dune-project
.github/workflows/: ocaml.yml
_build/: .db  .digest-db  log
_build/default/src/euler1/: dune  infinity_list.cma  infinity_list.cmxa  infinity_list.cmxs  map.cma  map.cmxa  map.cmxs  map.ml  recursion.cma  recursion.cmxa  recursion.cmxs  recursion.ml  tailrecursion.cma  tailrecursion.cmxa  tailrecursion.cmxs  tailrecursion.ml
_build/default/src/euler1/.infinity_list.objs/byte/: infinity_list.cmi  infinity_list.cmo  infinity_list.cmt
_build/default/src/euler1/.merlin-conf/: lib-infinity_list  lib-map  lib-recursion  lib-tailrecursion
_build/default/src/euler2/: recursion2.cma  recursion2.cmxa  recursion2.cmxs  recursion2.ml  tailrecursion2.cma  tailrecursion2.cmxa  tailrecursion2.cmxs  tailrecursion2.ml
_build/default/src/euler2/.merlin-conf/: lib-recursion2  lib-tailrecursion2
_build/default/test/: euler1.bc  euler1.ml  euler2.bc  euler2.ml
_build/default/test/.euler1.eobjs/byte/: dune__exe__Euler1.cmi  dune__exe__Euler1.cmo  dune__exe__Euler1.cmt
_build/default/test/.euler1.eobjs/native/: dune__exe__Euler1.cmx
_build/default/test/.euler2.eobjs/byte/: dune__exe__Euler2.cmi  dune__exe__Euler2.cmo  dune__exe__Euler2.cmt
_build/default/test/.euler2.eobjs/native/: dune__exe__Euler2.cmx
_build/default/test/.merlin-conf/: exe-euler1  exe-euler2
src/euler1/: dune  infinity_list.ml  map.ml  recursion.ml
src/euler2/: dune  tailrecursion2.ml
test/: dune  euler1.ml
(+21 files in other folders)
