(library
 (name map)
 (wrapped false)
 (modules map)
 (libraries))

(library
 (name recursion)
 (wrapped false)
 (modules recursion)
 (libraries))

(library
 (name tailrecursion)
 (wrapped false)
 (modules tailrecursion)
 (libraries))

 (library
  (name infinity_list)
  (wrapped false)
  (modules infinity_list)
  (libraries))